Fix events css format +added dark mode test button

--- a/src/views/Events/Events.module.scss
+++ b/src/views/Events/Events.module.scss
@@ -1,17 +1,19 @@
 .searchPageTitle {
   color: var(--mui-palette-secondary-main);
 }
-.event_filter_icon {
-  color: var(--mui-palette-neutral-500);
-  font-size: 20;
-}
-.event_filter_list_icon {
-  color: var(--mui-palette-neutral-500);
-  font-size: 20;
-}
-.eventIcon {
-  color: var(--mui-palette-neutral-500);
-  font-size: 20;
+.event {
+  &_filter_icon {
+    color: var(--mui-palette-neutral-500);
+    font-size: 20;
+  }
+  &_filter_list_icon {
+    color: var(--mui-palette-neutral-500);
+    font-size: 20;
+  }
+  &_icon {
+    color: var(--mui-palette-neutral-500);
+    font-size: 20;
+  }
 }
 .attended_clw {
   background-color: var(--mui-palette-secondary-main);
